<resources>
    <string name="app_name">dataBook</string>

    // NAVIGATION
    <string name="signout"> Đăng Xuất</string>

    //Admin
    <string name="admin_page">Trang Admin</string>

    //Add book
    <string name="adding_book">Thêm sách</string>
    <string name="book_name"> Tên Sách </string>
    <string name="book_name_hint"> Nhập tên của quyển Sách </string>
    <string name="book_author"> Tên tác giả </string>
    <string name="book_author_hint"> Nhập tên của tác giả </string>
    <string name="book_price"> Giá </string>
    <string name="book_price_hint"> Nhập giá của sách </string>
    <string name="book_des"> Mô Tả </string>
    <string name="book_des_hint"> Nhập mô tả của sách </string>
    <string name="add_image">Thêm Ảnh</string>
    <string name="add_action"> Thêm sách mới </string>
    <string name="cancel"> Hủy</string>

    // Book Item
    <string name="book_item">Chi Tiết Sách</string>
    <string name="update_action">Cập nhật</string>
    <string name="delete_action">Xóa</string>

    // Menu Fragment
    <string name="info"> Thông tin</string>
    <string name="category"> Cùng thể loại</string>
    //Search
    <string name="search_hint">Nhập tên sách cần tìm kiếm</string>
    // Framgent Info
    <string name="bookDes"> Dune là một tiểu thuyết khoa học viễn tưởng của Frank Herbert,kể về hành trình của gia đình Atreides trên hành tinh Arrakis, nơi có nguồn tài nguyên quý giá là một loại chất tạo ra năng lượng gọi là Spice, và những cuộc chiến tranh để kiểm soát nó giữa các chủng tộc và các gia tộc quyền lực."</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="signup_success_notify">Đăng ký thành công</string>
    <string name="search">Tìm kiếm</string>
    <string name="laguage">Ngôn Ngữ</string>
    <string name="signin">Đăng Nhập</string>
    <string name="username">Tên Đăng Nhập</string>
    <string name="password">Mật Khẩu</string>
    <string name="signup">Đăng Ký</string>
    <string name="forgot_password">Quên Mật Khẩu</string>
    <string name="forgot_password_hint">Nhập Email của bạn vào đây</string>
    <string name="reset_email">Gửi Yêu Cầu</string>
    <string name="signup_title">Đăng Ký Tài Khoản</string>
    <string name="book_info">Thông Tin Sách</string>
    <string name="book_category">Thể Loại</string>

</resources>