<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/book_item"
        android:textColor="@color/text"
        android:textSize="26sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name_hint"
                android:id="@+id/bookName"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_author"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_hint"
                android:id="@+id/bookAuthor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_price"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_price_hint"
                android:id="@+id/bookPrice"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_des"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_des_hint"
                android:id="@+id/bookDes"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cateRview"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/text"
                />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/baseline_work"
                android:id="@+id/img"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_action"
                    android:background="@drawable/custom_button"
                    android:id="@+id/updateAction"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_action"
                    android:background="@drawable/custom_button"
                    android:id="@+id/deleteAction"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>