<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/book"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/app_title"
        android:layout_below="@id/logo"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/user"
        android:ems="15"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginHorizontal="15dp"
        android:ems="15"
        android:textSize="20dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_key_24"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/password"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:weightSum="8"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/register"
            android:background="@drawable/custom_button"
            android:layout_marginRight="10dp"
            android:text="@string/signup"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/cancel"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>